5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4056/executions/1578_1333.log
== SUBMITION (2019-03-27 19:16:49) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.181816
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:16:55) 
-- CODE:
expressao = 30 - 3 ** 2 + 8 // 3 ** 2 * 10
print(expressao)
-- EXECUTION TIME:
0.134678
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
